--- a/ES_Scenario_Helper/MainWindow.xaml
+++ b/ES_Scenario_Helper/MainWindow.xaml
@@ -6,13 +6,15 @@
         xmlns:local="clr-namespace:ES_Scenario_Helper"
         mc:Ignorable="d"
         ResizeMode="NoResize"
-        Title="ES Scenario Helper - Ben Levy" Height="575" Width="900">
+        Title="ES Scenario Helper - Ben Levy" Height="700" Width="900">
     <Grid>
              <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -52,20 +54,35 @@
             <Label Target="{Binding ElementName=Arrival}" Content="Arrival Airport:" Grid.Row="7" Grid.Column="0"></Label>
             <TextBox Name="Arrival" Grid.Row="7" Grid.Column="0">KDEN</TextBox>
 
-            <Label Target="{Binding ElementName=Route}" Content="Route:" Grid.Row="8" Grid.Column="0"></Label>
-            <TextBox Name="Route" Grid.Row="8" Grid.Column="0">CLASH1</TextBox>
+            <Label Target="{Binding ElementName=Route}" Content="Route For ES:" Grid.Row="8" Grid.Column="0"></Label>
+            <TextBox Name="Route" Grid.Row="8" Grid.Column="0">CLASH EVRLY HASHE JAAAM HUDPI QWIKE</TextBox>
+
+            <Label Target="{Binding ElementName=FlightPlanRoute}" Content="Route For Flight Plan:" Grid.Row="8" Grid.Column="0"></Label>
+            <TextBox Name="FlightPlanRoute" Grid.Row="9" Grid.Column="0">CLASH1</TextBox>
    
-            <Label Target="{Binding ElementName=BetweenAc}" Content="Time in between Aircraft:" Grid.Row="9"
+            <Label Target="{Binding ElementName=BetweenAc}" Content="Time in between Aircraft:" Grid.Row="10"
                    Grid.Column="0"></Label>
             <TextBox Name="BetweenAc" Grid.Row="10" Grid.Column="0">0</TextBox>
-   
-			<Button Margin="0,10" Grid.Row="11" Click="Generate">Generate</Button>
 
-            <Button Grid.Row="12" Click="CopyResult">Copy Result</Button>
+            <Label Target="{Binding ElementName=BetweenAc}" Content="Waypoint to Cross At:" Grid.Row="11"
+                   Grid.Column="0"></Label>
+            <TextBox Name="Waypoint" Grid.Row="11" Grid.Column="0">QWIKE</TextBox>
+
+            <Label Target="{Binding ElementName=WaypointCross}" Content="Altitude to Cross Waypoint At:" Grid.Row="12"
+                   Grid.Column="0"></Label>
+            <TextBox Name="WaypointCross" Grid.Row="12" Grid.Column="0">11000</TextBox>
+   
+			<Button Margin="0,10" Grid.Row="13" Click="Generate">Generate</Button>
+
+            <Button Grid.Row="14" Click="CopyResult">Copy Result</Button>
 
         </StackPanel>
    
         <!-- right column -->
-        <TextBox Margin="10" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" Name="Result" Grid.Row="0" Grid.Column="1" IsReadOnly="True">Result</TextBox>
+        <TextBox HorizontalScrollBarVisibility="Visible"
+
+                 VerticalScrollBarVisibility="Visible"
+
+                 TextWrapping="Wrap" Margin="10" Name="Result" Height="630px"  Grid.Row="0" Grid.Column="1" IsReadOnly="True">Result</TextBox>
     </Grid>
 </Window>
